[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.6.8",
    "bcrypt>=5.0.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "py-vapid>=1.9.4",
    "python-dotenv>=1.2.1",
    "pywebpush>=2.3.0",
    "qrcode[pil]>=8.2",
    "replit-object-storage>=1.0.2",
    "requests>=2.32.5",
]
